# openconfig-restconf-api

./: README.md  pyproject.toml
openconfig_restconf_api/: main.py
openconfig_restconf_api/openconfig/: oc_bgp.py  oc_interfaces.py  oc_system.py
