[tool.poetry]
name = "openconfig-restconf-api"
version = "0.1.0"
description = ""
authors = ["Viacheslav Hletenko v.gletenko@vyos.io"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
pyang = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
